--- a/ctest-app/src/app/app.component.html
+++ b/ctest-app/src/app/app.component.html
@@ -1,3 +1,18 @@
 <h1>
   {{title}}
 </h1>
+<h2>
+	My heroes
+</h2>
+
+<div *ngIf="selectedHero">
+	<label>id: </label>{{selectedHero.id}}<br>
+    <label>name: </label>
+    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
+</div>
+
+<ul class="heroes">
+	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+		<span class="badge">{{hero.id}}</span> {{hero.name}}
+	</li>
+</ul>
