--- a/ctest-app/src/app/app.component.html
+++ b/ctest-app/src/app/app.component.html
@@ -5,14 +5,10 @@
 	My heroes
 </h2>
 
-<div *ngIf="selectedHero">
-	<label>id: </label>{{selectedHero.id}}<br>
-    <label>name: </label>
-    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
-</div>
-
 <ul class="heroes">
 	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
 		<span class="badge">{{hero.id}}</span> {{hero.name}}
 	</li>
 </ul>
+
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
