--- a/ctest-app/src/app/app.component.html
+++ b/ctest-app/src/app/app.component.html
@@ -1,14 +1,9 @@
 <h1>
-  {{title}}
+    {{title}}
 </h1>
-<h2>
-	My heroes
-</h2>
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Dashboard</a>
+</nav>
 
-<ul class="heroes">
-	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-		<span class="badge">{{hero.id}}</span> {{hero.name}}
-	</li>
-</ul>
-
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<router-outlet></router-outlet>
