--- a/ctest-app/src/app/hero-detail/hero-detail.component.html
+++ b/ctest-app/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,4 @@
+<button (click)="goBack()">go back</button>
 <div *ngIf="hero">
 	<h2>
 		{{hero.name}} details
@@ -6,4 +7,3 @@
 	<label>name: </label>
 	<input [(ngModel)]="hero.name" placeholder="name"/>
 </div>
-	
