--- a/ctest-app/src/app/hero-detail/hero-detail.component.html
+++ b/ctest-app/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,6 @@
 	<label>id: </label>{{hero.id}}<br>
 	<label>name: </label>
 	<input [(ngModel)]="hero.name" placeholder="name"/>
+	<br>
+	<button (click)="save()">Save</button>
 </div>
