--- a/ctest-app/src/app/hero-detail/hero-detail.component.css
+++ b/ctest-app/src/app/hero-detail/hero-detail.component.css
@@ -27,3 +27,10 @@ button:disabled {
   color: #ccc;
   cursor: auto;
 }
+button.delete {
+  float:right;
+  margin-top: 2px;
+  margin-right: .8em;
+  background-color: gray !important;
+  color:white;
+}
