--- a/ctest-app/src/app/heroes.component.html
+++ b/ctest-app/src/app/heroes.component.html
@@ -1,4 +1,15 @@
 <h2>
+	Add a Hero
+</h2>
+
+<div>
+  <label>Hero name:</label> <input #heroName />
+  <button (click)="add(heroName.value); heroName.value=''">
+    Add
+  </button>
+</div>
+
+<h2>
 	My heroes
 </h2>
 
@@ -6,6 +17,7 @@
 	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
 		<a>
 			<span class="badge">{{hero.id}}</span> {{hero.name}}
+			<button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button>
 		</a>
 	</li>
 </ul>
